cleaned up ui controller & component names

--- a/OnionArchitectureDemo/ClientApp/app/components/car-list/car-list.component.html
+++ b/OnionArchitectureDemo/ClientApp/app/components/car-list/car-list.component.html
@@ -1,4 +1,4 @@
-<h1>Weather forecast</h1>
+<h1>Cars</h1>
 
 <p>This component demonstrates fetching data from the server.</p>
 <div class="sales-banner">SALE NOW ON!</div>
@@ -19,7 +19,6 @@
                     {{ car.carName }}
                 </a>
             </td>
-            <td>{{ car.hasSpareWheel }}</td>
         </tr>
     </tbody>
 </table>
