--- a/OnionArchitectureDemo/ClientApp/app/components/navmenu/navmenu.component.html
+++ b/OnionArchitectureDemo/ClientApp/app/components/navmenu/navmenu.component.html
@@ -18,7 +18,7 @@
                     </a>
                 </li>
                 <li [routerLinkActive]="['link-active']">
-                    <a [routerLink]="['/car-list']">
+                    <a [routerLink]="['/cars']">
                         <span class='glyphicon glyphicon-th-list'></span> Cars On Sale
                     </a>
                 </li>
